# Triangular-billiard

./: .clang-format  .gitignore  CMakeLists.txt  CODE_CONVENTION.md  README.md  code-convention.md  equations.md  notes.md  organizing-graphs.md
graphs/: firstGraph.C  firstSimulation.txt  graphs.md  secondSimulation.txt
graphsMacros/: firstGraph.C  generateParticles  generateParticles.cpp  graphs.C  graphs2.C  histos.C  histos1.C  initialGraphs.C
include/: billiard.cpp  billiard.hpp  commands.hpp  interface.hpp  particle.hpp  point.hpp  statistics.hpp
particles/: partGeneration  partGeneration.cpp  particles.txt
src/: billiard.cpp  commands.cpp  main.cpp  particle.cpp  statistics.cpp
tests/: billiard.test.cpp  statistics.test.cpp
